--- a/C/congruences.html
+++ b/C/congruences.html
@@ -186,6 +186,9 @@ s&apos;il existe un entier <span class="katex"><span class="katex-mathml"><math 
 <li>D&#xE9;montrer que <span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mn>3</mn></mrow><annotation encoding="application/x-tex">3</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.64444em;vertical-align:0em;"></span><span class="mord">3</span></span></span></span> est inversible modulo <span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mn>5</mn></mrow><annotation encoding="application/x-tex">5</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.64444em;vertical-align:0em;"></span><span class="mord">5</span></span></span></span>.</li>
 <li>D&#xE9;montrer que <span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mn>4</mn></mrow><annotation encoding="application/x-tex">4</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.64444em;vertical-align:0em;"></span><span class="mord">4</span></span></span></span> n&apos;admet pas d&apos;inverse modulo <span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mn>6</mn></mrow><annotation encoding="application/x-tex">6</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.64444em;vertical-align:0em;"></span><span class="mord">6</span></span></span></span>.</li>
 </ul>
+<h3 class="mume-header" id="exercice-nsimatex">Exercice NSI+Matex</h3>
+
+<p>Faire un script qui trouve s&apos;il existe un inverse de <span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>a</mi></mrow><annotation encoding="application/x-tex">a</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.43056em;vertical-align:0em;"></span><span class="mord mathdefault">a</span></span></span></span> modulo <span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>m</mi></mrow><annotation encoding="application/x-tex">m</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.43056em;vertical-align:0em;"></span><span class="mord mathdefault">m</span></span></span></span>.</p>
 
       </div>
       <div class="md-sidebar-toc"><ul>
@@ -208,6 +211,7 @@ s&apos;il existe un entier <span class="katex"><span class="katex-mathml"><math 
 <ul>
 <li><a href="#m%C3%A9thode-%C3%A9l%C3%A9mentaire">M&#xE9;thode &#xE9;l&#xE9;mentaire</a></li>
 <li><a href="#exemple-1">Exemple</a></li>
+<li><a href="#exercice-nsimatex">Exercice NSI+Matex</a></li>
 </ul>
 </li>
 </ul>
